<resources>
    <string name="app_name">Split</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_workout">New Workout</string>
    <string name="workoutButton">Submit</string>
    <string name="workoutHint">Workout Name</string>
    <string name="new_day_string">New Day</string>
    <string name="day_name_string">New Day Name</string>
</resources>
